X-Panel 0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2006-10-20 Malte
	- Recycled old VHCS - Code to be a base for our new X-Panel!


VHCS 2.4.8 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~
	
2006-10-15 Carsten Schoene:
	- GUI:
		* updated phpmyadmin to 2.9.0.2

2006-10-01 Carsten Schoene:
	- GUI:
		* updated phpmyadmin to 2.9.0.1
		* reverted backup-mgr changes from Benedikt, because this was already fixed by me

2006-09-23 Benedikt Heintel
	- GUI:
		* added missing files for phpMyAdmin 2.9.0
		* fixed bug #420: backup routine killed if user has deleted his backupdir

2006-09-21 Carsten Schoene:
	- GUI:
		* updated phpmyadmin to 2.9.0

2006-09-15 Benedikt Heintel
	- CONF:
		* Changed: TLS in proftpd.conf and commented

2006-09-12 Mark Henning
	- GUI:
		* Fixed Bug: adminlevel - reseller ip can be switched on/off
		* Fixed Bug: missing variable $port at server_status.php added
		* Fixed Bug: some bugs in adminlevel serverports fixed

2006-09-12 Carsten Schoene
	- ENGINE:
		* fixed column index in logs manager

2006-09-10 Benedikt Heintel
	-LANGUAGES
		* Updated lang_german

2006-09-06 Marcus Moll
	- GUI:
		* Fixed Bug: client level / closed tickets link id fixed

2006-09-05 Malte Geierhos
	- GUI:
		* Added Support for Subdomain - Catchall in GUI

2006-09-05 Mark Henning
	- GUI:
		* Fixed Bug 398: typo fixed
		* Fixed Bug 404: invalid mail headers fixed / linebreaks fixed
		* Fixed Bug 405: invalid mail headers fixed

2006-09-04 Malte Geierhos
	- ENGINE :
		* Fixed Bug: Use Servername as Hostname when creating vftp - mysql user (needed for remote mysql-servers)

2006-09-03 Mark Henning
	- GUI:
		* Fixed Bug: change password for admin needs the current password

2006-09-01 Mark Henning
	- GUI:
		* Fixed Bug: javascript to set autodefault for mountpoint client/add_alias.tpl

2006-08-31 Mark Henning
	- GUI:
		* Fixed Bug: added missing supportsystem menu for admin level

2006-08-31 Carsten Schoene
	- ENGINE: