@@ -6,7 +6,7 @@
     #
     
     #
-    #SuexecUserGroup {SUEXEC_USER} {SUEXEC_GROUP}
+    SuexecUserGroup {SUEXEC_USER} {SUEXEC_GROUP}
     #
 
     ServerAdmin     root@{ALS_NAME}
@@ -35,8 +35,10 @@
     # httpd als entry cgi support END.
 
     <Directory {GUI_ROOT_DIR}>
-        php_admin_value open_basedir "{GUI_ROOT_DIR}/:/etc/vhcs2/:/proc/:{WWW_DIR}/:/tmp/:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin"
-	php_admin_value session.save_path "/tmp/"
+        <IfModule mod_php.c>
+            php_admin_value open_basedir "{GUI_ROOT_DIR}/:/etc/vhcs2/:/proc/:{WWW_DIR}/:/tmp/:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin"
+            php_admin_value session.save_path "/tmp/"
+	   </IfModule>
     </Directory>
 
     # httpd als entry PHP2 support BEGIN.
