@@ -1,1 +1,3 @@
-            php_admin_flag engine off
+            <IfModule mod_php.c>
+                php_admin_flag engine off
+            </IfModule>
