@@ -19,8 +19,10 @@ Alias /vhcs2 /var/www/vhcs2/gui
 </Directory>
 
 <Directory /var/www/vhcs2/gui/tools/filemanager>
-    php_flag register_globals On
-    php_admin_value open_basedir "/var/www/vhcs2/gui/tools/filemanager/:/tmp/:/usr/share/php/"
+    <IfModule mod_php.c>
+        php_flag register_globals On
+        php_admin_value open_basedir "/var/www/vhcs2/gui/tools/filemanager/:/tmp/:/usr/share/php/"
+    </IfModule>
 </Directory>
 
 Alias /vhcs_images /var/www/vhcs2/gui/images
