@@ -1668,6 +1668,8 @@ sub dmn_add_httpd_file_data {
 
 	my $www_dir = $main::cfg{'APACHE_WWW_DIR'};
 
+	my $starter_dir = $main::cfg{'PHP_STARTUP_DIR'};
+
 	my $httpd_uid = $main::cfg{'APACHE_USER'};
 
 	my $httpd_gid = $main::cfg{'APACHE_GROUP'};
@@ -1681,13 +1683,35 @@ sub dmn_add_httpd_file_data {
 	my $sys_group = "$suexec_user_pref$sys_gid";
 
 	#
+	# Starter-Scripts for FastCGI
+	#
+
+	$rs = make_dir(
+					"$starter_dir",
+					$httpd_uid,
+					$httpd_gid,
+					0770
+					);
+
+	return $rs if ($rs != 0);
+
+	$rs = make_dir(
+					"$starter_dir/$dmn_name",
+					$sys_user,
+					$sys_group,
+					0770
+					);
+
+	return $rs if ($rs != 0);
+
+	#
 	# Domain WWW directories;
 	#
 
 	$rs = make_dir(
 					"$www_dir/$dmn_name",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1696,7 +1720,7 @@ sub dmn_add_httpd_file_data {
 	$rs = make_dir(
 					"$www_dir/$dmn_name/htdocs",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1714,7 +1738,7 @@ sub dmn_add_httpd_file_data {
 	$rs = make_dir(
 					"$www_dir/$dmn_name/logs",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1723,7 +1747,7 @@ sub dmn_add_httpd_file_data {
 	$rs = make_dir(
 					"$www_dir/$dmn_name/phptmp",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1732,7 +1756,7 @@ sub dmn_add_httpd_file_data {
 	$rs = make_dir(
 					"$www_dir/$dmn_name/backups",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1741,7 +1765,7 @@ sub dmn_add_httpd_file_data {
 	$rs = make_dir(
 					"$www_dir/$dmn_name/errors",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1750,7 +1774,7 @@ sub dmn_add_httpd_file_data {
 	$rs = make_dir(
 					"$www_dir/$dmn_name/errors/401",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1759,7 +1783,7 @@ sub dmn_add_httpd_file_data {
 	$rs = make_dir(
 					"$www_dir/$dmn_name/errors/403",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1768,7 +1792,7 @@ sub dmn_add_httpd_file_data {
 	$rs = make_dir(
 					"$www_dir/$dmn_name/errors/404",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1777,7 +1801,7 @@ sub dmn_add_httpd_file_data {
 	$rs = make_dir(
 					"$www_dir/$dmn_name/errors/500",
 					$sys_user,
-					$httpd_gid,
+					$sys_group,
 					0770
 					);
 
@@ -1791,7 +1815,7 @@ sub dmn_add_httpd_file_data {
 								"$www_dir/$dmn_name/.htpasswd",
 								"\n",
 								$sys_user,
-								$httpd_gid,
+								$sys_group,
 								0660
 								);
 
@@ -1801,7 +1825,7 @@ sub dmn_add_httpd_file_data {
 								"$www_dir/$dmn_name/.htgroup",
 								"\n",
 								$sys_user,
-								$httpd_gid,
+								$sys_group,
 								0660
 								);
 
@@ -1825,7 +1849,7 @@ sub dmn_add_httpd_file_data {
 										"$www_dir/$dmn_name/errors/401/index.php",
 										$err_tpl,
 										$sys_user,
-										$httpd_gid,
+										$sys_group,
 										0660
 										);
 
@@ -1838,7 +1862,7 @@ sub dmn_add_httpd_file_data {
 										"$www_dir/$dmn_name/errors/403/index.php",
 										$err_tpl,
 										$sys_user,
-										$httpd_gid,
+										$sys_group,
 										0660
 										);
 
@@ -1851,7 +1875,7 @@ sub dmn_add_httpd_file_data {
 										"$www_dir/$dmn_name/errors/404/index.php",
 										$err_tpl,
 										$sys_user,
-										$httpd_gid,
+										$sys_group,
 										0660
 										);
 
@@ -1864,7 +1888,7 @@ sub dmn_add_httpd_file_data {
 										"$www_dir/$dmn_name/errors/500/index.php",
 										$err_tpl,
 										$sys_user,
-										$httpd_gid,
+										$sys_group,
 										0660
 										);
 
@@ -1890,7 +1914,7 @@ sub dmn_add_httpd_file_data {
 									"$www_dir/$dmn_name/htdocs/index.html",
 									$index_tpl,
 									$sys_user,
-									$httpd_gid,
+									$sys_group,
 									0660
 									);
 
@@ -1928,6 +1952,8 @@ sub dmn_change_httpd_file_data {
 
 	my $www_dir = $main::cfg{'APACHE_WWW_DIR'};
 
+	my $starter_dir = $main::cfg{'PHP_STARTER_DIR'};
+
 	my $httpd_uid = $main::cfg{'APACHE_USER'};
 
 	my $httpd_gid = $main::cfg{'APACHE_GROUP'};
@@ -1941,6 +1967,32 @@ sub dmn_change_httpd_file_data {
 	my $sys_group = "$suexec_user_pref$sys_gid";
 
 	#
+	# Starter-Scripts for FastCGI
+	#
+
+	if( ! -d "$starter_dir") {
+		$rs = make_dir(
+						"$starter_dir",
+						$httpd_uid,
+						$httpd_gid,
+						0770
+						);
+
+		return $rs if ($rs != 0);
+	}
+
+	if( ! -d "$starter_dir/$dmn_name") {
+		$rs = make_dir(
+						"$starter_dir/$dmn_name",
+						$sys_user,
+						$sys_group,
+						0770
+						);
+
+		return $rs if ($rs != 0);
+	}
+
+	#
 	# Domain WWW directories;
 	#
 
@@ -1949,7 +2001,7 @@ sub dmn_change_httpd_file_data {
 		$rs = make_dir(
 						"$www_dir/$dmn_name/phptmp",
 						$sys_user,
-						$httpd_gid,
+						$sys_group,
 						0770
 					);
 
@@ -1984,6 +2036,17 @@ sub dmn_del_httpd_file_data {
     my $root_dir = $main::cfg{'ROOT_DIR'};
 
     my $www_dir = $main::cfg{'APACHE_WWW_DIR'};
+
+    my $starter_dir = $main::cfg{'PHP_STARTER_DIR'};
+
+    #
+    # Starter directory
+    #
+    if ( -e "$starter_dir/$dmn_name" ) {
+
+    	($rs, $rdata) = del_dir("$starter_dir/$dmn_name");
+
+    }
 
     #
     # Domain WWW directories;
